[metadata]
name = redis
version = attr: redis.__version__
description = Python client for Redis key-value store
long_description = file: README.rst
url = https://github.com/andymccurdy/redis-py
author = Andy McCurdy
author_email = sedrik@gmail.com
maintainer = Andy McCurdy
maintainer_email = sedrik@gmail.com
keywords = Redis, key-value store
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy


[options]
packages = redis
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*

[options.extras_require]
hiredis = hiredis>=0.1.3

[pycodestyle]
show-source = 1
exclude = .venv,.tox,dist,docs,build,*.egg,redis_install

[mypy]
python_version = 2.7
disallow_incomplete_defs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
ignore_missing_imports = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True
warn_unused_ignores = True


# disallow_untyped_defs = True
# disallow_any_generics = True



[bdist_wheel]
universal = 1
